# edu-ai-workshop-openai-agents-sdk

./: .env.sample  .gitignore  .pre-commit-config.yaml  CLAUDE.md  ISSUES_SUMMARY.md  Makefile  README.md  WORKSHOP_ISSUES_REPORT.md  WORKSHOP_SPEC.md  pyproject.toml  temporal_installation.ipynb
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  copilot-instructions.md
.github/workflows/: ci.yml
example-notebook/: 02-Adding-Durability-Solution.ipynb  03-Human-in-the-Loop-Solution.ipynb
exercises/01_agent_hello_world/: README.md  exercise.ipynb  main.py
exercises/02_temporal_hello_world/: README.md  activities.py  exercise.ipynb  main.py  workflows.py
exercises/03_durable_agent/: README.md  activities.py  exercise.ipynb  main.py  workflows.py
exercises/04_agent_routing/: README.md  starter.py  worker.py  workflow.py
exercises/04_multi_agent_handoff/: README.md  activities.py  exercise.ipynb  main.py  workflows.py
scripts/: apply_notebook_metadata.py  bootstrap.sh  check_env.py  run_temporal.sh
solutions/01_agent_hello_world/: main.py  solution.ipynb
solutions/02_temporal_hello_world/: activities.py  main.py  solution.ipynb  workflows.py
solutions/03_durable_agent/: activities.py  main.py  solution.ipynb  solution_durability.ipynb  workflows.py
solutions/04_agent_routing/: README.md  requirements.txt  starter.py  worker.py  workflow.py
solutions/04_multi_agent_handoff/: activities.py  main.py  routing_workflow.py  run_worker.py  (+3 more)
tests/: test_exercise_01.py  test_exercise_02.py  test_exercise_03.py  test_exercise_04.py  test_pre_commit.py
